Moved constraint/axiom consistency encoding into WmmEncoder